# MlopsBasics

./: .dockerignore  .gitignore  README.md  pyproject.toml
.dvc/: config
.github/workflows/: build.yaml  ci.yaml
dvcfiles/: onnx_model.dvc  trained_model.dvc
environments/continuous_integration/: Dockerfile-app  docker-compose.yaml
environments/development/: Dockerfile-app  Dockerfile-core  docker-compose.yaml
environments/production/: Dockerfile-app  docker-compose.yaml
src/app/: wsgi.py
src/app/views/: routes.py
src/app/views/api/: __init__.py  _lib.py
src/config/: convert_onnx.yaml  predict.yaml  predict_onnx.yaml  train.yaml
src/config/data/: cifar10.yaml  cola.yaml  imagenet1k.yaml
src/config/encoder/: resnet50.yaml
src/config/optimizer/: adam.yaml  sgd.yaml
src/config/scheduler/: cosin.yaml
src/configs/encoder/: bert.yaml
src/configs/tokenizer/: bert.yaml
src/factory/data/: __init__.py  base.py  cifar10.py  cola.py  imagenet1k.py
src/factory/lit/: callback.py  task.py
src/misc/: profile.py
src/scripts/: convert_onnx.py  predict.py  predict_onnx.py  train.py
